--- a/api/frontends/scrumdinger/package.json
+++ b/api/frontends/scrumdinger/package.json
@@ -17,7 +17,7 @@
 		"@skeletonlabs/tw-plugin": "0.4.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
 		"@tailwindcss/forms": "0.5.9",
 		"@tailwindcss/typography": "0.5.15",
 		"@types/eslint": "^9.6.0",
@@ -42,6 +42,7 @@
 	"type": "module",
 	"dependencies": {
 		"@floating-ui/dom": "1.6.12",
+		"jwt-decode": "^4.0.0",
 		"lucide-svelte": "^0.462.0"
 	}
 }
