--- a/api/frontends/scrumdinger/package.json
+++ b/api/frontends/scrumdinger/package.json
@@ -16,6 +16,7 @@
 		"@skeletonlabs/skeleton": "2.10.3",
 		"@skeletonlabs/tw-plugin": "0.4.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-static": "^3.0.6",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
 		"@tailwindcss/forms": "0.5.9",
