--- a/zarf/docker/dockerfile.sales
+++ b/zarf/docker/dockerfile.sales
@@ -1,5 +1,5 @@
 # Build the Go Binary.
-FROM golang:1.23 AS build_sales
+FROM golang:1.23 AS build_scrumdinger
 ENV CGO_ENABLED=0
 ARG BUILD_REF
 
@@ -19,7 +19,7 @@ WORKDIR /service/api/tooling/admin
 RUN go build -ldflags "-X main.build=${BUILD_REF}"
 
 # Build the service binary.
-WORKDIR /service/api/services/sales
+WORKDIR /service/api/services/scrumdinger
 RUN go build -ldflags "-X main.build=${BUILD_REF}"
 
 
@@ -27,17 +27,17 @@ RUN go build -ldflags "-X main.build=${BUILD_REF}"
 FROM alpine:3.20
 ARG BUILD_DATE
 ARG BUILD_REF
-RUN addgroup -g 1000 -S sales && \
-    adduser -u 1000 -h /service -G sales -S sales
-COPY --from=build_sales --chown=sales:sales /service/api/tooling/admin/admin /service/admin
-COPY --from=build_sales --chown=sales:sales /service/api/services/sales/sales /service/sales
+RUN addgroup -g 1000 -S scrumdinger && \
+    adduser -u 1000 -h /service -G scrumdinger -S scrumdinger
+COPY --from=build_scrumdinger --chown=scrumdinger:scrumdinger /service/api/tooling/admin/admin /service/admin
+COPY --from=build_scrumdinger --chown=scrumdinger:scrumdinger /service/api/services/scrumdinger/scrumdinger /service/scrumdinger
 WORKDIR /service
-USER sales
-CMD ["./sales"]
+USER scrumdinger
+CMD ["./scrumdinger"]
 
 LABEL org.opencontainers.image.created="${BUILD_DATE}" \
-      org.opencontainers.image.title="sales-api" \
+      org.opencontainers.image.title="scrumdinger-api" \
       org.opencontainers.image.authors="William Kennedy <bill@ardanlabs.com>" \
-      org.opencontainers.image.source="https://github.com/ardanlabs/service/tree/master/a/services/sales" \
+      org.opencontainers.image.source="https://github.com/ardanlabs/service/tree/master/a/services/scrumdinger" \
       org.opencontainers.image.revision="${BUILD_REF}" \
       org.opencontainers.image.vendor="Ardan Labs"
