--- a/zarf/compose/docker_compose.yaml
+++ b/zarf/compose/docker_compose.yaml
@@ -28,10 +28,10 @@ services:
     restart: unless-stopped
     entrypoint: ['./admin', 'migrate-seed']
     environment:
-      - SALES_DB_USER=postgres
-      - SALES_DB_PASSWORD=postgres
-      - SALES_DB_HOST=database
-      - SALES_DB_DISABLE_TLS=true
+      - SCRUMDINGER_DB_USER=postgres
+      - SCRUMDINGER_DB_PASSWORD=postgres
+      - SCRUMDINGER_DB_HOST=database
+      - SCRUMDINGER_DB_DISABLE_TLS=true
     networks:
       scrumdinger-system-network:
         ipv4_address: 10.5.0.10
@@ -87,11 +87,11 @@ services:
       - GOMAXPROCS
       - GOGC=off
       - GOMEMLIMIT
-      - SALES_DB_USER=postgres
-      - SALES_DB_PASSWORD=postgres
-      - SALES_DB_HOST=database
-      - SALES_DB_DISABLE_TLS=true
-      - SALES_AUTH_HOST=http://auth:6000
+      - SCRUMDINGER_DB_USER=postgres
+      - SCRUMDINGER_DB_PASSWORD=postgres
+      - SCRUMDINGER_DB_HOST=database
+      - SCRUMDINGER_DB_DISABLE_TLS=true
+      - SCRUMDINGER_AUTH_HOST=http://auth:6000
       - KUBERNETES_NAMESPACE
       - KUBERNETES_NAME
       - KUBERNETES_POD_IP
