--- a/zarf/k8s/base/sales/base-sales.yaml
+++ b/zarf/k8s/base/sales/base-sales.yaml
@@ -16,53 +16,53 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: sales-system
+  name: scrumdinger-system
 
 ---
 
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sales
-  namespace: sales-system
+  name: scrumdinger
+  namespace: scrumdinger-system
 
 spec:
   selector:
     matchLabels:
-      app: sales
+      app: scrumdinger
 
   template:
     metadata:
       labels:
-        app: sales
+        app: scrumdinger
 
     spec:
       terminationGracePeriodSeconds: 60
 
       initContainers:
       - name: init-migrate-seed
-        image: sales-image
+        image: scrumdinger-image
         command: ['./admin', 'migrate-seed']
         env:
-        - name: SALES_DB_USER
+        - name: SCRUMDINGER_DB_USER
           valueFrom:
             configMapKeyRef:
               name: app-config
               key: db_user
               optional: true
-        - name: SALES_DB_PASSWORD
+        - name: SCRUMDINGER_DB_PASSWORD
           valueFrom:
             configMapKeyRef:
               name: app-config
               key: db_password
               optional: true
-        - name: SALES_DB_HOST_PORT
+        - name: SCRUMDINGER_DB_HOST_PORT
           valueFrom:
             configMapKeyRef:
               name: app-config
               key: db_hostport
               optional: true
-        - name: SALES_DB_DISABLE_TLS
+        - name: SCRUMDINGER_DB_DISABLE_TLS
           valueFrom:
             configMapKeyRef:
               name: app-config
@@ -70,13 +70,13 @@ spec:
               optional: true
 
       containers:
-      - name: sales
-        image: sales-image
+      - name: scrumdinger
+        image: scrumdinger-image
 
         ports:
-        - name: sales
+        - name: scrumdinger
           containerPort: 3000
-        - name: sales-debug
+        - name: scrumdinger-debug
           containerPort: 3010
 
         readinessProbe: # readiness probes mark the service available to accept traffic.
@@ -113,25 +113,25 @@ spec:
             resourceFieldRef:
               resource: limits.memory
 
-        - name: SALES_DB_USER # here as an example for configuring a hosted db.
+        - name: SCRUMDINGER_DB_USER # here as an example for configuring a hosted db.
           valueFrom:
             configMapKeyRef:
               name: app-config
               key: db_user
               optional: true
-        - name: SALES_DB_PASSWORD
+        - name: SCRUMDINGER_DB_PASSWORD
           valueFrom:
             configMapKeyRef:
               name: app-config
               key: db_password
               optional: true
-        - name: SALES_DB_HOST_PORT
+        - name: SCRUMDINGER_DB_HOST_PORT
           valueFrom:
             configMapKeyRef:
               name: app-config
               key: db_hostport
               optional: true
-        - name: SALES_DB_DISABLE_TLS
+        - name: SCRUMDINGER_DB_DISABLE_TLS
           valueFrom:
             configMapKeyRef:
               name: app-config
@@ -177,9 +177,9 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: sales-service
-  namespace: sales-system
+  name: scrumdinger-service
+  namespace: scrumdinger-system
 
 spec:
   selector:
-    app: sales
+    app: scrumdinger
