--- a/zarf/k8s/dev/auth/dev-auth-patch-service.yaml
+++ b/zarf/k8s/dev/auth/dev-auth-patch-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: auth-service
-  namespace: sales-system
+  namespace: scrumdinger-system
 
 spec:
   type: ClusterIP
