--- a/zarf/k8s/dev/database/dev-database.yaml
+++ b/zarf/k8s/dev/database/dev-database.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: sales-system
+  name: scrumdinger-system
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: database-data
-  namespace: sales-system
+  namespace: scrumdinger-system
 spec:
   accessModes:
     - ReadWriteOnce
@@ -19,7 +19,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: database
-  namespace: sales-system
+  namespace: scrumdinger-system
 spec:
   selector:
     matchLabels:
@@ -92,7 +92,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: database-service
-  namespace: sales-system
+  namespace: scrumdinger-system
 spec:
   type: ClusterIP
   selector:
@@ -106,7 +106,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: pghbaconf
-  namespace: sales-system
+  namespace: scrumdinger-system
 data:
   # file-like keys
   pg_hba.conf: |
