--- a/zarf/k8s/dev/sales/dev-sales-patch-service.yaml
+++ b/zarf/k8s/dev/sales/dev-sales-patch-service.yaml
@@ -1,19 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sales-service
-  namespace: sales-system
+  name: scrumdinger-service
+  namespace: scrumdinger-system
 
 spec:
   type: ClusterIP
 
   ports:
-  - name: sales
+  - name: scrumdinger
     port: 3000
-    targetPort: sales
-  - name: sales-debug
+    targetPort: scrumdinger
+  - name: scrumdinger-debug
     port: 3010
-    targetPort: sales-debug
+    targetPort: scrumdinger-debug
   - name: metrics
     port: 4000
     targetPort: metrics
