--- a/zarf/k8s/dev/sales/kustomization.yaml
+++ b/zarf/k8s/dev/sales/kustomization.yaml
@@ -1,14 +1,14 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../../base/sales/
-  - ./dev-sales-configmap.yaml
+  - ../../base/scrumdinger/
+  - ./dev-scrumdinger-configmap.yaml
 patches:
-  - path: ./dev-sales-patch-deploy.yaml
-  - path: ./dev-sales-patch-service.yaml
+  - path: ./dev-scrumdinger-patch-deploy.yaml
+  - path: ./dev-scrumdinger-patch-service.yaml
 images:
-  - name: sales-image
-    newName: localhost/angrieralien/sales
+  - name: scrumdinger-image
+    newName: localhost/angrieralien/scrumdinger
     newTag: 0.0.1
   - name: metrics-image
     newName: localhost/angrieralien/metrics
