--- a/zarf/docker/dockerfile.scrumdinger
+++ b/zarf/docker/dockerfile.scrumdinger
@@ -1,6 +1,10 @@
 # Use an official Node.js 18 image as the base
 FROM node:23-alpine as build_web_scrumdinger
 
+ARG KID
+ARG AUTH_URL
+
+
 # Set the working directory to /app
 WORKDIR /app
 
@@ -13,7 +17,7 @@ RUN npm ci
 COPY api/frontends/scrumdinger .
 
 # Run the SvelteKit build script
-RUN npm run build
+RUN PUBLIC_KID="${KID}" PUBLIC_AUTH_URL="${AUTH_URL}" npm run build
 
 
 # # Build the Go Binary.
@@ -46,6 +50,7 @@ RUN go build -ldflags "-X main.build=${BUILD_REF}"
 FROM alpine:3.20
 ARG BUILD_DATE
 ARG BUILD_REF
+
 RUN addgroup -g 1000 -S scrumdinger && \
     adduser -u 1000 -h /service -G scrumdinger -S scrumdinger
 COPY --from=build_scrumdinger --chown=scrumdinger:scrumdinger /service/api/tooling/admin/admin /service/admin
